pom.xml for spock