@@ -16,8 +16,16 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 
+		<gmaven-plugin.version>1.6</gmaven-plugin.version>
+		<maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+		<version.spock>1.2-groovy-2.4</version.spock>
+		<version.groovy>2.4.15</version.groovy>
+		<org.jgroups.version>4.0.17.Final</org.jgroups.version>
+		<org.objenesis.version>2.6</org.objenesis.version>
+		<net.bytebuddy.version>1.8.21</net.bytebuddy.version>
+
 		<version.junit.junit>4.12</version.junit.junit>
-		<version.org.jmockit.jmockit>1.38</version.org.jmockit.jmockit>
+		<version.org.jmockit.jmockit>1.37</version.org.jmockit.jmockit>
 
 		<version.org.slf4j>1.7.12</version.org.slf4j>
 		<version.ch.qos.logback>1.1.3</version.ch.qos.logback>
@@ -40,14 +48,33 @@
 						<target>${maven.compiler.target}</target>
 					</configuration>
 				</plugin>
-        <plugin>
-        	<groupId>org.apache.maven.plugins</groupId>
-        	<artifactId>maven-surefire-plugin</artifactId>
-        	<version>2.9</version>
-        	<configuration>
-        		<argLine>-Djdk.attach.allowAttachSelf</argLine>
-        	</configuration>
-        </plugin>
+				<plugin>
+					<!-- The gmavenplus plugin is used to compile Groovy code. To learn
+						more about this plugin, visit https://github.com/groovy/GMavenPlus/wiki -->
+					<groupId>org.codehaus.gmavenplus</groupId>
+					<artifactId>gmavenplus-plugin</artifactId>
+					<version>${gmaven-plugin.version}</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>compile</goal>
+								<goal>compileTests</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin.version}</version>
+					<configuration>
+						<useFile>false</useFile>
+						<includes>
+							<include>**/*Test.java</include>
+							<include>**/*Spec.java</include>
+						</includes>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
@@ -60,6 +87,45 @@
 			<version>${version.junit.junit}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Spock -->
+		<dependency>
+			<groupId>org.spockframework</groupId>
+			<artifactId>spock-core</artifactId>
+			<version>${version.spock}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency> <!-- use a specific Groovy version rather than the one specified by spock-core -->
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>${version.groovy}</version>
+		</dependency>
+		<dependency> <!-- enables mocking of classes (in addition to interfaces) -->
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>${net.bytebuddy.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency> <!-- enables mocking of classes without default constructor (together with
+				CGLIB) -->
+			<groupId>org.objenesis</groupId>
+			<artifactId>objenesis</artifactId>
+			<version>${org.objenesis.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency> <!-- only required if Hamcrest matchers are used -->
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jgroups</groupId>
+			<artifactId>jgroups</artifactId>
+			<version>${org.jgroups.version}</version>
+		</dependency>
+
+		<!-- jmockit -->
 		<dependency>
 			<groupId>org.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
